<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_title"
        android:inputType="textCapSentences"
        android:autofillHints=""/>

    <ImageView
        android:id="@+id/recipeImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/recipe_image"
        android:scaleType="centerCrop"
        />

    <Button
        android:id="@+id/uploadImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_image" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ingredientsEditText"
        android:textSize="18sp"
        android:hint="@string/ingredients_one_per_line"
        android:layout_marginTop="16dp"
        android:minLines="5"
        android:inputType="textMultiLine|textCapSentences"
        android:autofillHints=""
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/instructionsEditText"
        android:textSize="18sp"
        android:hint="@string/instructions_one_per_line"
        android:layout_marginTop="16dp"
        android:minLines="5"
        android:inputType="textMultiLine|textCapSentences"
        android:autofillHints=""
        />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="16dp"/>
</LinearLayout>